--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <h4>My favorite food is Ramen.</h4>
                     <h4>If I could be any animal, I would be a lion.</h4>
                     <br>
-                    <h4>Hey babe, I just want to say, I love you!  </h4>
+                    <h4>Hi Cathy! Good luck on your final semester! Let us know if you want to stay in OC with us in July!  </h4>
             </div>
           </body>
         </html>
